# phone

./: CMakeLists.txt  DEVELOPMENT_GUIDE.md  README.md  build.ps1  idf_component.yml  partitions.csv  push_to_github.ps1  sdkconfig.defaults  t.md
components/bsp/: CMakeLists.txt  Kconfig  README.md  bsp_camera.c  esp32_p4_platform.c  idf_component.yml
components/bsp/include/bsp/: bsp_camera.h  esp32_p4_platform.h
components/bsp_st7102/: README.md  bsp.c  idf_component.yml
components/bsp_st7102/include/: bsp.h  bsp_lcd_init_cmds.h
components/kevincoooool__esp_lcd_st7102/: .component_hash  CHECKSUMS.json  LICENSE  README.md  esp_lcd_st7102_mipi.c  idf_component.yml
components/kevincoooool__esp_lcd_st7102/include/: esp_lcd_st7102.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/apps/: alarm_app.c  alarm_app.h  app_store_app.c  app_store_app.h  audio_app.c  audio_app.h  bt_settings_app.c  bt_settings_app.h  calculator_app.c  calculator_app.h  calendar_app.c  calendar_app.h  camera_app.c  camera_app.h  display_app.c  display_app.h  encrypt_app.c  encrypt_app.h  file_browser_app.c  file_browser_app.h  i2c_app.c  i2c_app.h  info_app.c  info_app.h  input_tool.c  input_tool.h  music_player_app.c  music_player_app.h  net_settings_app.c  net_settings_app.h  photo_album_app.c  photo_album_app.h  reader_app.c  reader_app.h  sdcard_app.c  sdcard_app.h  settings_app.c  settings_app.h  touch_app.c  touch_app.h  (+2 more)
main/apps/sample_app/: layout.json  manifest.json
main/system/: api_reference.h  app_downloader.c  app_downloader.h  app_installer.c  app_installer.h  app_manager.c  app_manager.h  app_signature.c  app_signature.h  bt_audio_service.c  bt_audio_service.h  bt_manager.c  bt_manager.h  control_center.c  control_center.h  crash_handler.c  crash_handler.h  dynamic_app_engine.c  dynamic_app_engine.h  file_cache.c  file_cache.h  firmware_verify.c  firmware_verify.h  gatt_service.c  gatt_service.h  gesture_manager.c  gesture_manager.h  home_screen.c  home_screen.h  i18n_manager.c  i18n_manager.h  memory_pool.c  memory_pool.h  memory_protection.c  memory_protection.h  net_manager.c  net_manager.h  notification_manager.c  notification_manager.h  ota_manager.c  (+35 more)
temp/00_board_check/: CMakeLists.txt  sdkconfig.defaults
temp/00_board_check/main/: CMakeLists.txt  board_check_main.c
temp/01_HowToCreateProject/: CMakeLists.txt
temp/01_HowToCreateProject/main/: CMakeLists.txt  main.c
temp/02_HelloWorld/: CMakeLists.txt  pytest_hello_world.py  sdkconfig.defaults
temp/02_HelloWorld/main/: CMakeLists.txt  hello_world_main.c
temp/03_nvs_counter/: CMakeLists.txt  sdkconfig.defaults
temp/03_nvs_counter/main/: CMakeLists.txt  nvs_counter_main.c
temp/04_freertos_tasks/: CMakeLists.txt  sdkconfig.defaults
temp/04_freertos_tasks/main/: CMakeLists.txt  freertos_tasks_main.c
temp/05_gpio_io/: CMakeLists.txt
temp/05_gpio_io/main/: CMakeLists.txt  Kconfig.projbuild  gpio_io_main.c
temp/06_gpio_interrupt/main/: gpio_interrupt_main.c
temp/07_uart_loopback/main/: uart_loopback_main.c
temp/08_i2c_tools/main/: cmd_i2ctools.c  cmd_i2ctools.h  i2ctools_example_main.c
temp/09_sdmmc/components/sd_card/: sd_test_io.c  sd_test_io.h
temp/09_sdmmc/main/: sd_card_example_main.c
temp/10_wifistation/main/: Kconfig.projbuild  station_example_main.c
temp/11_ethernetbasic/components/ethernet_init/: ethernet_init.c  ethernet_init.h
temp/11_ethernetbasic/main/: ethernet_example_main.c
temp/12_I2SCodec/components/bsp_extra/include/: bsp_board_extra.h
temp/12_I2SCodec/components/bsp_extra/src/: bsp_extra_audio.c
temp/12_I2SCodec/main/: example_config.h  i2s_es8311_example.c
temp/13_Displaycolorbar/main/: test_esp_lcd_jd9365.c
temp/14_lvgl_demo_v9/main/: main.c
temp/15_eth2ap/main/: ethernet_example_main.c
temp/16_video_lcd_display/: CMakeLists.txt  sdkconfig.defaults
temp/16_video_lcd_display/main/: CMakeLists.txt  app_video.c  app_video.h  idf_component.yml  main.c
temp/17_simple_video_server/components/example_video_common/: example_encoder.c  example_init_video.c
temp/17_simple_video_server/components/example_video_common/include/: example_video_common.h
temp/17_simple_video_server/frontend/mock/: es.mock.ts
temp/17_simple_video_server/frontend/src/: App.vue  camera.d.ts  main.ts
temp/17_simple_video_server/frontend/src/components/: CameraCard.vue
temp/17_simple_video_server/frontend/src/pages/: index.vue
temp/17_simple_video_server/main/: simple_video_server_example.c
temp/18_esp_brookesia_phone/: CMakeLists.txt  sdkconfig.defaults
temp/18_esp_brookesia_phone/components/brookesia_core/: CMakeLists.txt  idf_component.yml
temp/18_esp_brookesia_phone/components/brookesia_core/ai_framework/agent/: esp_brookesia_ai_agent.hpp
temp/18_esp_brookesia_phone/components/brookesia_core/ai_framework/expression/: esp_brookesia_ai_expression.hpp
temp/18_esp_brookesia_phone/components/brookesia_core/gui/lvgl/: esp_brookesia_lv_container.hpp  esp_brookesia_lv_object.cpp  esp_brookesia_lv_object.hpp  esp_brookesia_lv_screen.hpp
temp/18_esp_brookesia_phone/components/brookesia_core/gui/style/: esp_brookesia_gui_style.cpp  esp_brookesia_gui_style.hpp  esp_brookesia_gui_stylesheet_manager.hpp
temp/18_esp_brookesia_phone/components/brookesia_core/services/storage_nvs/: esp_brookesia_service_storage_nvs.cpp  esp_brookesia_service_storage_nvs.hpp
temp/18_esp_brookesia_phone/components/brookesia_core/systems/base/: esp_brookesia_base_display.cpp  esp_brookesia_base_display.hpp  esp_brookesia_base_event.cpp  esp_brookesia_base_event.hpp
temp/18_esp_brookesia_phone/components/brookesia_core/systems/phone/: esp_brookesia_phone.cpp  esp_brookesia_phone.hpp  esp_brookesia_phone_app.cpp  esp_brookesia_phone_display.cpp  esp_brookesia_phone_display.hpp  esp_brookesia_phone_manager.hpp
temp/18_esp_brookesia_phone/main/: CMakeLists.txt  idf_component.yml  main.cpp
tests/integration_tests/: CMakeLists.txt  test_app_signature.c  test_firmware_verify.c
tests/unit_tests/: CMakeLists.txt  test_ui_utils.c  test_utils.c
(+8 files in other folders)
