idf_component_register(SRCS "main.c"
                    "system/app_manager.c"
                    "system/status_bar.c"
                    "system/home_screen.c"
                    "system/app_installer.c"
                    "system/dynamic_app_engine.c"
                    "apps/display_app.c"
                    "apps/touch_app.c"
                    "apps/i2c_app.c"
                    "apps/sdcard_app.c"
                    "apps/audio_app.c"
                    "apps/settings_app.c"
                    "apps/info_app.c"
                    INCLUDE_DIRS "." "system" "apps"
                    REQUIRES bsp vfs)