idf_component_register(SRCS "main.c"
                    "system/app_manager.c"
                    "system/status_bar.c"
                    "system/home_screen.c"
                    "system/app_installer.c"
                    "system/dynamic_app_engine.c"
                    "system/net_manager.c"
                    "system/theme_manager.c"
                    "system/ota_manager.c"
                    "system/power_manager.c"
                    "system/bt_manager.c"
                    "system/gatt_service.c"
                    "system/bt_audio_service.c"
                    "system/notification_manager.c"
                    "system/app_downloader.c"
                    "system/gesture_manager.c"
                    "system/control_center.c"
                    "system/settings_manager.c"
                    "system/secure_storage.c"
                    "system/sensor_manager.c"
                    "system/i18n_manager.c"
                    "system/task_manager.c"
                    "system/security_manager.c"
                    "system/crash_handler.c"
                    "system/memory_protection.c"
                    "system/memory_pool.c"
                    "system/file_cache.c"
                    "system/ui_animation.c"
                    "system/ui_feedback.c"
                    "system/permission_manager.c"
                    "system/service_manager.c"
                    "system/structured_logging.c"
                    "system/watchdog_manager.c"
                    "system/ui_utils.c"
                    "system/utils.c"
                    "system/app_signature.c"
                    "system/firmware_verify.c"
                    "apps/display_app.c"
                    "apps/touch_app.c"
                    "apps/i2c_app.c"
                    "apps/sdcard_app.c"
                    "apps/audio_app.c"
                    "apps/settings_app.c"
                    "apps/info_app.c"
                    "apps/encrypt_app.c"
                    "apps/file_browser_app.c"
                    "apps/net_settings_app.c"
                    "apps/camera_app.c"
                    "apps/music_player_app.c"
                    "apps/photo_album_app.c"
                    "apps/bt_settings_app.c"
                    "apps/reader_app.c"
                    "apps/app_store_app.c"
                    "apps/video_player_app.c"
                    "apps/calculator_app.c"
                    "apps/calendar_app.c"
                    "apps/alarm_app.c"
                    "apps/input_tool.c"
                    INCLUDE_DIRS "." "system" "apps"
                    REQUIRES bsp vfs esp_netif esp_eth esp_event nvs_flash esp_http_client esp_pm esp_driver_uart bt esp_lcd app_update mbedtls driver)