###############################################################################
# ESP-IDF 组件注册配置文件
# 
# 该文件位于组件目录（main/）下，用于向 ESP-IDF 构建系统注册组件。
# ESP-IDF 采用组件化架构，每个组件通过 idf_component_register 函数声明其
# 源代码文件、头文件路径、依赖关系等信息。
###############################################################################

#-----------------------------------------------------------------------------
# idf_component_register - ESP-IDF 组件注册函数
# 
# 该函数是 ESP-IDF 构建系统的核心函数，用于向构建系统声明组件的基本信息。
# 
# 参数说明：
#   SRCS       - 指定组件的源代码文件列表
#                "main.c" 是本项目的主源文件，包含 app_main 入口函数
#   
#   INCLUDE_DIRS - 指定组件的头文件搜索路径
#                  "." 表示当前目录（main/）作为头文件搜索路径
#                  这样其他组件可以通过 #include "xxx.h" 引用本组件的头文件
# 
# 可选参数（本项目未使用，但列出供参考）：
#   REQUIRES   - 指定本组件依赖的其他组件（如 driver、esp_wifi、esp_adc 等）
#   PRIV_REQUIRES - 指定本组件私有依赖（仅编译本组件时需要，不传递给依赖本组件的组件）
#   LDFLAGS    - 指定链接器选项
#   COMPONENT_DIR - 指定组件目录（默认为当前 CMakeLists.txt 所在目录）
# 
# 注意事项：
#   1. 每个 ESP-IDF 组件目录下必须有一个 CMakeLists.txt 文件
#   2. main 组件是特殊的组件，不需要显式声明 REQUIRES "main"
#   3. 源代码文件必须列出所有需要编译的 .c/.cpp 文件
#-----------------------------------------------------------------------------
idf_component_register(
    # 指定组件的源代码文件
    SRCS "main.c"
    
    # 指定头文件搜索路径（当前目录）
    INCLUDE_DIRS "."
)
